# Flashfusion

./: BasicAPI.cpp  BasicAPI.h  CMakeLists.txt  FindChisel.cmake  FindRealSense.cmake  FindSophus.cmake  GCFusion.files  GCFusion.includes  LICENSE  README.md  main.cpp  main_sim.cppqwe  prepare.sh
CHISEL/src/: CMakeLists.txt
CHISEL/src/open_chisel/: AlignmentAllocator.h  AllignedAllocator.h  Chisel.cpp  Chisel.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ColorVoxel.cpp  ColorVoxel.h  DistVoxel.cpp  DistVoxel.h  ProjectionIntegrator.cpp  ProjectionIntegrator.h  Stopwatch.h
CHISEL/src/open_chisel/camera/: PinholeCamera.cpp  PinholeCamera.h
CHISEL/src/open_chisel/geometry/: Raycast.cpp
CHISEL/src/open_chisel/marching_cubes/: MarchingCubes.h
CHISEL/src/open_chisel/mesh/: Mesh.h
CHISEL/src/open_chisel/threading/: Threading.h
GCFusion/: MapMaintain.hpp  MobileFusion.cpp  MobileFusion.h  MobileGUI.hpp
GCSLAM/: GCSLAM.cpp  GCSLAM.h  MultiViewGeometry.cpp  MultiViewGeometry.h  frame.h
GCSLAM/MILD/: BayesianFilter.hpp  loop_closure_detector.hpp  sparse_match.hpp
GCSLAM/ORBSLAM/: ORBextractor.cpp  ORBextractor.h
Shaders/: Parse.h  Shaders.h  Vertex.h  draw_feedback.vert  draw_feedback_Phong.frag  draw_feedback_Phong.vert  draw_feedback_VoxelHashing.vert  draw_global_surface.vert  draw_tsdf_feedback.vert  vertex_feedback.vert
Tools/: CameraInterface.h  LiveLogReader.cpp  LiveLogReader.h  LogReader.h  OpenNI2Interface.cpp  OpenNI2Interface.h  RawLogReader.cpp  RawLogReader.h  RealSenseInterface.cpp  RealSenseInterface.h
param/: calib_icl.txt  calib_tum.txt  calib_xtion.txt  settings.yaml
third_party_library/: OpenNI-Linux-x64-2.2.0.33.tar.bz2
